# SNN-Cpp

./: .gitignore  README.md
Champ_fake/example/: srrip.cc
Champ_test/: README.txt  build_binary.sh  lru.cc
Champ_test/example/: lru-8MB.cc  lru_test.cc
Hawkeye/: CMakeLists.txt  build_binary.sh
Hawkeye/example/: cfr.cc  snn.h
NN/: build_binary.sh  check.cpp  simple.cpp
NN_libtorch_playground/: CMakeLists.txt  build_binary.sh  cos-func-approx-checkpoint.pt  snn.h
cache_replacement/: CMakeLists.txt  build_binary.sh  run_test.sh
cache_replacement/ChampCache/: README.txt  lru-config2
cache_replacement/ChampCache/example/: cache_snn.cc  snn.h
example-app/: CMakeLists.txt  build_binary.sh  example-app.cpp
example-app/ChampCache/example/: README.md  cache_nn.cc  cache_snn.cc  hawkeye_predictor.h  helper_function.h  lru.cc  lru_test.cc  nn.h  snn.h
src/: build_binary.sh
src/ChampCache/example/: hawkeye_algorithm.cc  nn.h
